# aapt2

./: .gitignore  CMakeLists.txt  README.md  build.sh  get_sources.sh
.github/workflows/: build.yml
cmake/: CMakeLists.txt  aapt2.cmake  libandroidfw.cmake  libexpat.cmake  libincfs.cmake  liblog.cmake  libpng.cmake  libz.cmake  libziparchive.cmake  zipalign.cmake
src/: platform_tools_version.h
src/aapt2/util/: Util.cpp
